--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,12 @@
 <head>
     <title>Cloud-based Clock</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="jquery.js"></script>
+    
 </head>
 <body>
-    <h1 id="clock">0:00</h1>
+    <h1 id="local_clock">0:00</h1>
+    <h1 id="server_clock">0:00</h1>
     <p id="hex"></p>
     <script src="logic.js"></script>
 </body>
