--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,8 @@
     
 </head>
 <body>
-    <h1 id="local_clock">0:00</h1>
-    <h1 id="server_clock">0:00</h1>
+    <h1 id="local_clock">Local Time: 0:00</h1>
+    <h1 id="server_clock">Server Time: 0:00</h1>
     <p id="hex"></p>
     <script src="logic.js"></script>
 </body>
