--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,5 @@
 <body>
     <h1 id="local_clock">Local Time: 0:00</h1>
     <h1 id="server_clock">Server Time: 0:00</h1>
-    <p id="hex"></p>
-    <script src="logic.js"></script>
+    <script type="text/javascript" src="logic.js"></script>
 </body>
