--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     
 </head>
 <body>
-    <h1 id="local_clock">Local Time: 0:00</h1>
-    <h1 id="server_clock">Server Time: 0:00</h1>
+    <div id="local_clock" class="clock_client"></div>
+    <div id="server_clock" class="clock_server"></div>
     <script type="text/javascript" src="logic.js"></script>
 </body>
